# ml_ransomware_detector

./: README.md  pyproject.toml
notebooks/reports/: test_notebook.ipynb
reports/: Files research.md  Ransomware.md
src/utils/: encrypt_compress.py  feature_extractor.py  test.py
